ADD: mempool processor & push notifications
